Added new Merge Lead Page and added Merge Lead objects

--- a/src/main/resources/object.properties
+++ b/src/main/resources/object.properties
@@ -64,6 +64,11 @@ ViewLead.Marketing.ID=viewLead_marketingCampaigns_sp
 ViewLead.Edit.Link=Edit
 ViewLead.Delete.Link=Delete
 
+#MergeLead page Objects
+MergeLead.FromLead.Xpath=(//img[@alt='Lookup'])[1]
+MergeLead.ToLead.Xpath=(//img[@alt='Lookup'])[2]
+MergeLead.MergeButton.Link=Merge
+
 #FindMergeLeads page Objects
 FindMergeLead.Firstname.Name=firstName
 FindMergeLead.FindLeadButton.Xpath=//button[contains(text(),'Find Leads')]
